grammar.js
    source_file: $ => optional(choice(
      $.trad,
      separated(choice(
        alias($._expression, $.statement),
        $.namespace_script,
        $.class_definition,
        $.interface_definition,
        $._trad,
        $.block,
      )),
      terminator,
    )),

    // TRADITIONAL FUNCTIONS

    // trad definitions
    _trad: $ => seq(del, $.trad, newline, del),
    tradfn: $ => trad_def($, DFN),
    _body: $ => body($, false),
    // inside loops, there can be additional control words,
    // or blocks including those control words
    _loop_body: $ => body($, true),

    // control words
    if_statement: $ => condition_statement($, 'if'),
    else_statement: $ => $.else,
    endif_statement: $ => choice($.endif, $.end),
    trap_statement: $ => expression_statement($, 'trap'),
    endtrap_statement: $ => choice($.endtrap, $.end),
    class_definition: $ => seq(
      $.class_statement,
      optional($._class_body),
      terminator, $.endclass_statement,
    ),
    _class_body: $ => repeat1(seq(terminator, choice(
      alias($._expression, $.statement),
      $._trad,
      $.namespace_script,
      $.class_definition,
      $.class_section,
      $.interface_definition,
      $.property_section,
      $.access_statement,
      $.attribute_statement,
      $.include_statement,
      $.using_statement,
      $.field_statement,
    ))),
    property_section: $ => seq(
      $.property_statement,
      optional(seq(terminator, $.access_statement)),
      // (!) allow any tradfn, not only get/set/shape methods
      repeat1(seq(terminator, del, $.tradfn, terminator, del)),
      terminator, $.endproperty_statement,
    ),
    class_statement: $ => seq(
      $.class,
      field('class_name', $.identifier),
      optional(seq(colon, choice($._identifier, $.string_literal))),
      repeat(seq(',', choice($._identifier, $.string_literal))),
    ),
    endclass_statement: $ => choice($.endclass, $.end),
    field_statement: $ => seq(
      $.field,
      optional($.visibility),
      optional($.sharing),
      optional($.readonly),
      optional($.type),
      choice(
        field('field_name', $.identifier),
        alias($._field_assignment, $.assignment)),
    ),
    using_statement: $ => seq(
      $.using,
      choice(
        $._identifier,
        seq(optional($._identifier), ',', optional($.assembly)),
      ),
    ),
    // like assignment, but left side must be an identifier
    _field_assignment: $ => seq(
      alias($._field_assign_left, $.assign_left),
      $.left_arrow,
      alias($._expression, $.assign_right),
    ),
    property_statement: $ => seq(
      $.property,
      optional(choice($.simple, $.keyed, $.numbered)),
      optional($.default),
      field('property_name', $.identifier),
      repeat(seq(',', $._identifier)),
    ),
    endproperty_statement: $ => choice($.endproperty, $.end),
    implements_statement: $ => seq(
      $.implements,
      choice(
        seq($.constructor, optional(seq($.base, $._expression))),
        $.destructor,
        seq($.method, $._identifier),
        seq($.trigger, choice(
          seq($._identifier, repeat(seq(',', $._identifier))),
          '*',
        )),
      ),
    ),
    base: $ => seq(colon, $._identifier),
    access_statement: $ => seq(
      $.access,
      choice(
        seq($.visibility, optional($.sharing)),
        $.sharing,
        $.webmethod,
      ),
      optional($.override),
      optional($.overridable),
    ),
    // other elements of class-related statements
    visibility: _ => choice(/private/i, /public/i),
    sharing: _ => choice(/instance/i, /shared/i),
    readonly: _ => /readonly/i,
    numbered: _ => /numbered/i,
    keyed: _ => /keyed/i,
    default: _ => /default/i,
    constructor: _ => /constructor/i,
    destructor: _ => /destructor/i,
    method: _ => /method/i,
    trigger: _ => /trigger/i,
    override: _ => /override/i,
    overridable: _ => /overridable/i,

    interface_definition: $ => seq(
      $.interface_statement,
      repeat(seq(newline, choice(
        $.interface_method,
        $.interface_property,
      ))),
      newline, $.endinterface_statement,
    ),
    // interface methods are tradfns without bodies
    interface_method: $ => seq(del, trad_header($, DFN), newline, del),
    interface_statement: $ => seq($.interface, field('interface_name', $.identifier)),
    endinterface_statement: $ => choice($.endinterface, $.end),

    // APL

    // an _expression is any non-dfn/dop valid expression
    _expression: $ => choice(
      expression($, 0,
        $.definition,
        ...literals.map(l => $[l + '_literal']),
        $.system_command,
        $.primitive,
        $.identifier,
      ),
      $.assignment,
    ),
    // an _expression becomes a _dfn_expression with one of ⍺,⍵,∇,∇∇
    // (∇∇ is valid in dfns, it will produce a SYNTAX ERROR when run)
    system_command: $ => $._system_command,

    // call factory function to generate rules for definitions
    ...def_rules(),

    // user defined identifiers
    identifier: _ => identifier,
    _identifier: $ => choice(
      $.identifier,
      seq($.identifier, repeat1(seq(alias('.', $.primitive), $.identifier))),
    ),
    // predefined identifiers allowed inside definitions
    dfn_identifier: _ => choice('⍺', '⍵', '∇'),
    string_literal: $ => seq(
      "'",
      prec(1, optional($.string_literal_content)),
      token.immediate("'"),
    ),
    string_literal_content: _ => token.immediate(stringContentLiteral),
    number_literal: _ => token(numberLiteral),
    primitive: _ => primitive,
    left_arrow: _ => '←',
    comment: _ => token(seq(lamp, /.*/)),
  },
});

// build names list, with dXX prefixes
// 'name' will give ['name', 'dfn_name', ...]
// '_name' will give ['_name', '_dfn_name', ...]
function defs(name) {
  const prefixes = ['', 'dfn_', 'dop1_', 'dop2_'];
  const priv = name[0] == '_' ? '_' : '';
  const base = name[0] == '_' ? name.substring(1) : name;
  return prefixes.map((prefix) => [priv + prefix + base]);
}

// return naked and definition nodes for given name
function _defs($$, name) {
  const d = defs(name);
  return d.map((di) => $$[di]);
}

// return naked and definition aliases for given name of
// each corresponding _expression (eg: $.dfn_expression
// is aliased as $.name_expression)
function _alias($$, name){
  const expressions = _defs($$, '_expression');
  const aliases = _defs($$, name);
  return expressions.map((ei, i) => alias(ei, aliases[i]));
}

// for given choices, return "scan" of choice
function _choice(choices){
  const c0 = choices[0];
  const c1 = choice(choices[1], c0);
  const c2 = choice(choices[2], c1);
  const c3 = choice(choices[3], c2);
  return [c0, c1, c2, c3];
}

// return expression for given definition d (0 for naked)
// and possible extra elements (an expression might be
// composed of other expressions, if those subexpressions
// contain identifiers of dfn, dop1 or dop2, the expression
// will be a dfn, dop1 or dop2)
function expression($$, d, ...extra) {
  const prefix = ['', 'dfn_', 'dop1_', 'dop2_'][d];
  const _assignment = _defs($$, 'assignment')[d];
  const expression = choice(
    ...expressions.map((expression) => $$[prefix + expression]),
    ...extra,
  );
  if (d == 0)
    return repeat1(choice(expression, _assignment));
  const _expressions = _choice(_defs($$, '_expression'));
  return choice(
    seq(
      optional(_expressions[d-1]),
      expression,
      optional(_expressions[d]),
    ),
    _assignment,
  );
}

// statements followed by simple expressions
function expression_statement($$, statement){
  return seq($$[statement], alias($$._expression, $$[statement+'_expression']));
}

// for a list of statements for different definitions,
// a separator and a definition d (0 for naked), return
// a list of statements separated by separator including
// any statements up to d. If d < 0, statements should
// contain only the naked statements (d == 0)
function separated(statements, separator=terminator, d=-1){
  if (d == 0) statements = statements[0];
  if (d <= 0) return seq(
    optional(separator),
    statements,
    repeat(seq(separator, statements)),
    optional(separator),
  );
  const _statements = _choice(statements);
  return seq(
    optional(separator),
    repeat(seq(_statements[d-1], separator)),
    statements[d],
    repeat(seq(separator, _statements[d])),
    optional(separator),
  );
}

// return terminator-separed list of statements including at least one
// identifier for given definition d
function statements($$, d){
  return separated(_alias($$, 'statement'), terminator, d);
}

// return terminator-separed list of _statements including at least one
// identifier for given definition d
function _statements($$, d){
  return separated(_defs($$, '_statement'), terminator, d);
}

// return sequence where at least one of the left or right elements
// include an identifier for given definition d
function _left_right(left, middle, right, d){
  if (d == 0)
    return prec.right(seq(left[0], middle, right[0]));
  const _left = _choice(left);
  const _right = _choice(right);
  return choice(
    prec.right(seq(_left[d-1], middle, right[d])),
    prec.right(seq(left[d], middle, _right[d])),
  );
}

// create rules for all blocks inside trad-defs, taking into
// account that loop blocks can contain additional statements,
// as well as other blocks inside loop blocks
function block_rules(){
  function block(name){
    return ($, body) => seq(
      label($, $[name + '_statement']),
      optional(seq(terminator, body)),
      terminator, label($, $['end' + name + '_statement']),
    );
  }
  const rules = {
    if_block: ($, body) => seq(
      label($, $.if_statement),
      repeat(seq(
        choice(
          repeat(seq(terminator, label($, $.andif_statement))),
          repeat(seq(terminator, label($, $.orif_statement))),
        ),
        optional(seq(terminator, body)),
        terminator, label($, $.elseif_statement),
      )),
      choice(
        repeat(seq(terminator, label($, $.andif_statement))),
        repeat(seq(terminator, label($, $.orif_statement))),
      ),
      optional(seq(
        optional(seq(terminator, body)),
        terminator, label($, $.else_statement),
      )),
      optional(seq(terminator, body)),
      terminator, label($, $.endif_statement),
    ),
